source/eu.remics.domainlogic/src/eu/remics/domainlogic/grammar/BBLParser.java
// $ANTLR 3.4 D:\\eclipse-rcp-helios-win32\\workspace\\eu.remics.domainlogic\\src\\eu\\remics\\domainlogic\\grammar\\BBL.g 2012-09-17 11:45:25

  package eu.remics.domainlogic.grammar;


import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;

import org.antlr.runtime.tree.*;


@SuppressWarnings({"all", "warnings", "unchecked"})
public class BBLParser extends Parser {
    public static final String[] tokenNames = new String[] {
        "<invalid>", "<EOR>", "<DOWN>", "<UP>", "AFTER_ALL", "AND", "APOSTR", "CHAR", "COMMA", "DIGIT", "DOT", "FOR_EACH", "IF", "OF_THE", "OR", "OTHERWISE", "QUOTE", "RETURN", "SHOW_ERROR", "SHOW_WARNING", "STRING", "WHEN", "WS", "'are equal to'", "'are greater or equal to'", "'are greater than'", "'are lower or equal to'", "'are lower than'", "'are not equal to'", "'is equal to'", "'is greater or equal to'", "'is greater than'", "'is lower or equal to'", "'is lower than'", "'is not equal to'"
    };

    public static final int EOF=-1;
    public static final int T__23=23;
    public static final int T__24=24;
    public static final int T__25=25;
    public static final int T__26=26;
    public static final int T__27=27;
    public static final int T__28=28;
    public static final int T__29=29;
    public static final int T__30=30;
    public static final int T__31=31;
    public static final int T__32=32;
    public static final int T__33=33;
    public static final int T__34=34;
    public static final int AFTER_ALL=4;
    public static final int AND=5;
    public static final int APOSTR=6;
    public static final int CHAR=7;
    public static final int COMMA=8;
    public static final int DIGIT=9;
    public static final int DOT=10;
    public static final int FOR_EACH=11;
    public static final int IF=12;
    public static final int OF_THE=13;
    public static final int OR=14;
    public static final int OTHERWISE=15;
    public static final int QUOTE=16;
    public static final int RETURN=17;
    public static final int SHOW_ERROR=18;
    public static final int SHOW_WARNING=19;
    public static final int STRING=20;
    public static final int WHEN=21;
    public static final int WS=22;

    // delegates
    public Parser[] getDelegates() {
        return new Parser[] {};
    }

    // delegators


    public BBLParser(TokenStream input) {
        this(input, new RecognizerSharedState());
    }
    public BBLParser(TokenStream input, RecognizerSharedState state) {
        super(input, state);
    }

protected TreeAdaptor adaptor = new CommonTreeAdaptor();

public void setTreeAdaptor(TreeAdaptor adaptor) {
    this.adaptor = adaptor;
}
public TreeAdaptor getTreeAdaptor() {
    return adaptor;
}
    public String[] getTokenNames() { return BBLParser.tokenNames; }
    public String getGrammarFileName() { return "D:\\eclipse-rcp-helios-win32\\workspace\\eu.remics.domainlogic\\src\\eu\\remics\\domainlogic\\grammar\\BBL.g"; }


    public static class rule_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "rule"
    // D:\\eclipse-rcp-helios-win32\\workspace\\eu.remics.domainlogic\\src\\eu\\remics\\domainlogic\\grammar\\BBL.g:34:1: rule : ( sentences )+ ;
    public final BBLParser.rule_return rule() throws RecognitionException {
        BBLParser.rule_return retval = new BBLParser.rule_return();
        retval.start = input.LT(1);


        Object root_0 = null;

        BBLParser.sentences_return sentences1 =null;



        try {
            // D:\\eclipse-rcp-helios-win32\\workspace\\eu.remics.domainlogic\\src\\eu\\remics\\domainlogic\\grammar\\BBL.g:34:5: ( ( sentences )+ )
            // D:\\eclipse-rcp-helios-win32\\workspace\\eu.remics.domainlogic\\src\\eu\\remics\\domainlogic\\grammar\\BBL.g:34:7: ( sentences )+
            {
            root_0 = (Object)adaptor.nil();


            // D:\\eclipse-rcp-helios-win32\\workspace\\eu.remics.domainlogic\\src\\eu\\remics\\domainlogic\\grammar\\BBL.g:34:7: ( sentences )+
            int cnt1=0;
            loop1:
            do {
                int alt1=2;
                int LA1_0 = input.LA(1);

                if ( ((LA1_0 >= FOR_EACH && LA1_0 <= IF)||(LA1_0 >= RETURN && LA1_0 <= WHEN)) ) {
                    alt1=1;
                }


                switch (alt1) {
            	case 1 :
            	    // D:\\eclipse-rcp-helios-win32\\workspace\\eu.remics.domainlogic\\src\\eu\\remics\\domainlogic\\grammar\\BBL.g:34:7: sentences
            	    {
            	    pushFollow(FOLLOW_sentences_in_rule187);
            	    sentences1=sentences();

            	    state._fsp--;

            	    adaptor.addChild(root_0, sentences1.getTree());

            	    }
            	    break;

            	default :
            	    if ( cnt1 >= 1 ) break loop1;
                        EarlyExitException eee =
                            new EarlyExitException(1, input);
                        throw eee;
                }
                cnt1++;
            } while (true);


            }

            retval.stop = input.LT(-1);


            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }

        finally {
        	// do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "rule"


    public static class sentences_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "sentences"
    // D:\\eclipse-rcp-helios-win32\\workspace\\eu.remics.domainlogic\\src\\eu\\remics\\domainlogic\\grammar\\BBL.g:36:1: sentences : sentence ( ( COMMA | AND ) sentences | DOT )? ;
    public final BBLParser.sentences_return sentences() throws RecognitionException {
        BBLParser.sentences_return retval = new BBLParser.sentences_return();
        retval.start = input.LT(1);


        Object root_0 = null;

        Token set3=null;
        Token DOT5=null;
        BBLParser.sentence_return sentence2 =null;

        BBLParser.sentences_return sentences4 =null;


        Object set3_tree=null;
        Object DOT5_tree=null;

        try {
            // D:\\eclipse-rcp-helios-win32\\workspace\\eu.remics.domainlogic\\src\\eu\\remics\\domainlogic\\grammar\\BBL.g:36:10: ( sentence ( ( COMMA | AND ) sentences | DOT )? )
            // D:\\eclipse-rcp-helios-win32\\workspace\\eu.remics.domainlogic\\src\\eu\\remics\\domainlogic\\grammar\\BBL.g:36:12: sentence ( ( COMMA | AND ) sentences | DOT )?
            {
            root_0 = (Object)adaptor.nil();


            pushFollow(FOLLOW_sentence_in_sentences195);
            sentence2=sentence();

            state._fsp--;

            adaptor.addChild(root_0, sentence2.getTree());

            // D:\\eclipse-rcp-helios-win32\\workspace\\eu.remics.domainlogic\\src\\eu\\remics\\domainlogic\\grammar\\BBL.g:36:21: ( ( COMMA | AND ) sentences | DOT )?
            int alt2=3;
            int LA2_0 = input.LA(1);

            if ( (LA2_0==AND||LA2_0==COMMA) ) {
                alt2=1;
            }
            else if ( (LA2_0==DOT) ) {
                alt2=2;
            }
            switch (alt2) {
                case 1 :
                    // D:\\eclipse-rcp-helios-win32\\workspace\\eu.remics.domainlogic\\src\\eu\\remics\\domainlogic\\grammar\\BBL.g:36:22: ( COMMA | AND ) sentences
                    {
                    set3=(Token)input.LT(1);

                    if ( input.LA(1)==AND||input.LA(1)==COMMA ) {
                        input.consume();
                        adaptor.addChild(root_0, 
                        (Object)adaptor.create(set3)
                        );
                        state.errorRecovery=false;
                    }
                    else {
                        MismatchedSetException mse = new MismatchedSetException(null,input);
                        throw mse;
                    }


                    pushFollow(FOLLOW_sentences_in_sentences206);
                    sentences4=sentences();

                    state._fsp--;

                    adaptor.addChild(root_0, sentences4.getTree());

                    }
                    break;
                case 2 :
                    // D:\\eclipse-rcp-helios-win32\\workspace\\eu.remics.domainlogic\\src\\eu\\remics\\domainlogic\\grammar\\BBL.g:36:48: DOT
                    {
                    DOT5=(Token)match(input,DOT,FOLLOW_DOT_in_sentences210); 
                    DOT5_tree = 
                    (Object)adaptor.create(DOT5)
                    ;
                    adaptor.addChild(root_0, DOT5_tree);


                    }
                    break;

            }


            }

            retval.stop = input.LT(-1);


            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }

        finally {
        	// do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "sentences"


    public static class sentence_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "sentence"
    // D:\\eclipse-rcp-helios-win32\\workspace\\eu.remics.domainlogic\\src\\eu\\remics\\domainlogic\\grammar\\BBL.g:38:1: sentence : ( conditional ( alternative )? | loop ( after_all )? | except | operation | error | return_stm );
    public final BBLParser.sentence_return sentence() throws RecognitionException {
        BBLParser.sentence_return retval = new BBLParser.sentence_return();
        retval.start = input.LT(1);


        Object root_0 = null;

        BBLParser.conditional_return conditional6 =null;

        BBLParser.alternative_return alternative7 =null;

        BBLParser.loop_return loop8 =null;

        BBLParser.after_all_return after_all9 =null;

        BBLParser.except_return except10 =null;

        BBLParser.operation_return operation11 =null;

        BBLParser.error_return error12 =null;

        BBLParser.return_stm_return return_stm13 =null;



        try {
            // D:\\eclipse-rcp-helios-win32\\workspace\\eu.remics.domainlogic\\src\\eu\\remics\\domainlogic\\grammar\\BBL.g:38:9: ( conditional ( alternative )? | loop ( after_all )? | except | operation | error | return_stm )
            int alt5=6;
            switch ( input.LA(1) ) {
            case IF:
                {
                alt5=1;
                }
                break;
            case FOR_EACH:
                {
                alt5=2;
                }
                break;
            case WHEN:
                {
                alt5=3;
                }
                break;
            case STRING:
                {
                alt5=4;
                }
                break;
            case SHOW_ERROR:
            case SHOW_WARNING:
                {
                alt5=5;
                }
                break;
            case RETURN:
                {
                alt5=6;
                }
                break;
            default:
                NoViableAltException nvae =
                    new NoViableAltException("", 5, 0, input);

                throw nvae;

            }

            switch (alt5) {
                case 1 :
                    // D:\\eclipse-rcp-helios-win32\\workspace\\eu.remics.domainlogic\\src\\eu\\remics\\domainlogic\\grammar\\BBL.g:38:11: conditional ( alternative )?
                    {
                    root_0 = (Object)adaptor.nil();


                    pushFollow(FOLLOW_conditional_in_sentence219);
                    conditional6=conditional();

                    state._fsp--;

                    adaptor.addChild(root_0, conditional6.getTree());

                    // D:\\eclipse-rcp-helios-win32\\workspace\\eu.remics.domainlogic\\src\\eu\\remics\\domainlogic\\grammar\\BBL.g:38:23: ( alternative )?
                    int alt3=2;
                    int LA3_0 = input.LA(1);

                    if ( (LA3_0==OTHERWISE) ) {
                        alt3=1;
                    }
                    switch (alt3) {
                        case 1 :
                            // D:\\eclipse-rcp-helios-win32\\workspace\\eu.remics.domainlogic\\src\\eu\\remics\\domainlogic\\grammar\\BBL.g:38:24: alternative
                            {
                            pushFollow(FOLLOW_alternative_in_sentence222);
                            alternative7=alternative();

                            state._fsp--;

                            adaptor.addChild(root_0, alternative7.getTree());

                            }
                            break;

                    }


                    }
                    break;
                case 2 :
                    // D:\\eclipse-rcp-helios-win32\\workspace\\eu.remics.domainlogic\\src\\eu\\remics\\domainlogic\\grammar\\BBL.g:39:11: loop ( after_all )?
                    {
                    root_0 = (Object)adaptor.nil();


                    pushFollow(FOLLOW_loop_in_sentence236);
                    loop8=loop();

                    state._fsp--;

                    adaptor.addChild(root_0, loop8.getTree());

                    // D:\\eclipse-rcp-helios-win32\\workspace\\eu.remics.domainlogic\\src\\eu\\remics\\domainlogic\\grammar\\BBL.g:39:16: ( after_all )?
                    int alt4=2;
                    int LA4_0 = input.LA(1);

                    if ( (LA4_0==AFTER_ALL) ) {
                        alt4=1;
                    }
                    switch (alt4) {
                        case 1 :
                            // D:\\eclipse-rcp-helios-win32\\workspace\\eu.remics.domainlogic\\src\\eu\\remics\\domainlogic\\grammar\\BBL.g:39:16: after_all
                            {
                            pushFollow(FOLLOW_after_all_in_sentence238);
                            after_all9=after_all();

                            state._fsp--;

                            adaptor.addChild(root_0, after_all9.getTree());

                            }
                            break;

                    }


                    }
                    break;
                case 3 :
                    // D:\\eclipse-rcp-helios-win32\\workspace\\eu.remics.domainlogic\\src\\eu\\remics\\domainlogic\\grammar\\BBL.g:40:11: except
                    {
                    root_0 = (Object)adaptor.nil();


                    pushFollow(FOLLOW_except_in_sentence251);
                    except10=except();

                    state._fsp--;

                    adaptor.addChild(root_0, except10.getTree());

                    }
                    break;
                case 4 :
                    // D:\\eclipse-rcp-helios-win32\\workspace\\eu.remics.domainlogic\\src\\eu\\remics\\domainlogic\\grammar\\BBL.g:41:11: operation
                    {
                    root_0 = (Object)adaptor.nil();


                    pushFollow(FOLLOW_operation_in_sentence263);
                    operation11=operation();

                    state._fsp--;

                    adaptor.addChild(root_0, operation11.getTree());

                    }
                    break;
                case 5 :
                    // D:\\eclipse-rcp-helios-win32\\workspace\\eu.remics.domainlogic\\src\\eu\\remics\\domainlogic\\grammar\\BBL.g:42:11: error
                    {
                    root_0 = (Object)adaptor.nil();


                    pushFollow(FOLLOW_error_in_sentence275);
                    error12=error();

                    state._fsp--;

                    adaptor.addChild(root_0, error12.getTree());

                    }
                    break;
                case 6 :
                    // D:\\eclipse-rcp-helios-win32\\workspace\\eu.remics.domainlogic\\src\\eu\\remics\\domainlogic\\grammar\\BBL.g:43:11: return_stm
                    {
                    root_0 = (Object)adaptor.nil();


                    pushFollow(FOLLOW_return_stm_in_sentence287);
                    return_stm13=return_stm();

                    state._fsp--;

                    adaptor.addChild(root_0, return_stm13.getTree());

                    }
                    break;

            }
            retval.stop = input.LT(-1);


            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }

        finally {
        	// do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "sentence"


    public static class conditional_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "conditional"
    // D:\\eclipse-rcp-helios-win32\\workspace\\eu.remics.domainlogic\\src\\eu\\remics\\domainlogic\\grammar\\BBL.g:45:1: conditional : IF ^ conditions COMMA ! sentences ;
    public final BBLParser.conditional_return conditional() throws RecognitionException {
        BBLParser.conditional_return retval = new BBLParser.conditional_return();
        retval.start = input.LT(1);


        Object root_0 = null;

        Token IF14=null;
        Token COMMA16=null;
        BBLParser.conditions_return conditions15 =null;

        BBLParser.sentences_return sentences17 =null;


        Object IF14_tree=null;
        Object COMMA16_tree=null;

        try {
            // D:\\eclipse-rcp-helios-win32\\workspace\\eu.remics.domainlogic\\src\\eu\\remics\\domainlogic\\grammar\\BBL.g:45:12: ( IF ^ conditions COMMA ! sentences )
            // D:\\eclipse-rcp-helios-win32\\workspace\\eu.remics.domainlogic\\src\\eu\\remics\\domainlogic\\grammar\\BBL.g:45:14: IF ^ conditions COMMA ! sentences
            {
            root_0 = (Object)adaptor.nil();


            IF14=(Token)match(input,IF,FOLLOW_IF_in_conditional294); 
            IF14_tree = 
            (Object)adaptor.create(IF14)
            ;
            root_0 = (Object)adaptor.becomeRoot(IF14_tree, root_0);


            pushFollow(FOLLOW_conditions_in_conditional297);
            conditions15=conditions();

            state._fsp--;

            adaptor.addChild(root_0, conditions15.getTree());

            COMMA16=(Token)match(input,COMMA,FOLLOW_COMMA_in_conditional299); 

            pushFollow(FOLLOW_sentences_in_conditional302);
            sentences17=sentences();

            state._fsp--;

            adaptor.addChild(root_0, sentences17.getTree());

            }

            retval.stop = input.LT(-1);


            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }

        finally {
        	// do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "conditional"


    public static class alternative_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "alternative"
    // D:\\eclipse-rcp-helios-win32\\workspace\\eu.remics.domainlogic\\src\\eu\\remics\\domainlogic\\grammar\\BBL.g:47:1: alternative : OTHERWISE ^ COMMA ! sentences ;
    public final BBLParser.alternative_return alternative() throws RecognitionException {
        BBLParser.alternative_return retval = new BBLParser.alternative_return();
        retval.start = input.LT(1);


        Object root_0 = null;

        Token OTHERWISE18=null;
        Token COMMA19=null;
        BBLParser.sentences_return sentences20 =null;


        Object OTHERWISE18_tree=null;
        Object COMMA19_tree=null;

        try {
            // D:\\eclipse-rcp-helios-win32\\workspace\\eu.remics.domainlogic\\src\\eu\\remics\\domainlogic\\grammar\\BBL.g:47:12: ( OTHERWISE ^ COMMA ! sentences )
            // D:\\eclipse-rcp-helios-win32\\workspace\\eu.remics.domainlogic\\src\\eu\\remics\\domainlogic\\grammar\\BBL.g:47:14: OTHERWISE ^ COMMA ! sentences
            {
            root_0 = (Object)adaptor.nil();


            OTHERWISE18=(Token)match(input,OTHERWISE,FOLLOW_OTHERWISE_in_alternative309); 
            OTHERWISE18_tree = 
            (Object)adaptor.create(OTHERWISE18)
            ;
            root_0 = (Object)adaptor.becomeRoot(OTHERWISE18_tree, root_0);


            COMMA19=(Token)match(input,COMMA,FOLLOW_COMMA_in_alternative312); 

            pushFollow(FOLLOW_sentences_in_alternative315);
            sentences20=sentences();

            state._fsp--;

            adaptor.addChild(root_0, sentences20.getTree());

            }

            retval.stop = input.LT(-1);


            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }

        finally {
        	// do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "alternative"


    public static class loop_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "loop"
    // D:\\eclipse-rcp-helios-win32\\workspace\\eu.remics.domainlogic\\src\\eu\\remics\\domainlogic\\grammar\\BBL.g:49:1: loop : FOR_EACH ^ STRING OF_THE ! STRING COMMA ! sentences ;
    public final BBLParser.loop_return loop() throws RecognitionException {
        BBLParser.loop_return retval = new BBLParser.loop_return();
        retval.start = input.LT(1);


        Object root_0 = null;

        Token FOR_EACH21=null;
        Token STRING22=null;
        Token OF_THE23=null;
        Token STRING24=null;
        Token COMMA25=null;
        BBLParser.sentences_return sentences26 =null;


        Object FOR_EACH21_tree=null;
        Object STRING22_tree=null;
        Object OF_THE23_tree=null;
        Object STRING24_tree=null;
        Object COMMA25_tree=null;

        try {
            // D:\\eclipse-rcp-helios-win32\\workspace\\eu.remics.domainlogic\\src\\eu\\remics\\domainlogic\\grammar\\BBL.g:49:5: ( FOR_EACH ^ STRING OF_THE ! STRING COMMA ! sentences )
            // D:\\eclipse-rcp-helios-win32\\workspace\\eu.remics.domainlogic\\src\\eu\\remics\\domainlogic\\grammar\\BBL.g:49:7: FOR_EACH ^ STRING OF_THE ! STRING COMMA ! sentences
            {
            root_0 = (Object)adaptor.nil();


            FOR_EACH21=(Token)match(input,FOR_EACH,FOLLOW_FOR_EACH_in_loop322); 
            FOR_EACH21_tree = 
            (Object)adaptor.create(FOR_EACH21)
            ;
            root_0 = (Object)adaptor.becomeRoot(FOR_EACH21_tree, root_0);


            STRING22=(Token)match(input,STRING,FOLLOW_STRING_in_loop325); 
            STRING22_tree = 
            (Object)adaptor.create(STRING22)
            ;
            adaptor.addChild(root_0, STRING22_tree);


            OF_THE23=(Token)match(input,OF_THE,FOLLOW_OF_THE_in_loop327); 

            STRING24=(Token)match(input,STRING,FOLLOW_STRING_in_loop330); 
            STRING24_tree = 
            (Object)adaptor.create(STRING24)
            ;
            adaptor.addChild(root_0, STRING24_tree);


            COMMA25=(Token)match(input,COMMA,FOLLOW_COMMA_in_loop332); 

            pushFollow(FOLLOW_sentences_in_loop335);
            sentences26=sentences();

            state._fsp--;

            adaptor.addChild(root_0, sentences26.getTree());

            }

            retval.stop = input.LT(-1);


            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }

        finally {
        	// do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "loop"


    public static class after_all_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "after_all"
    // D:\\eclipse-rcp-helios-win32\\workspace\\eu.remics.domainlogic\\src\\eu\\remics\\domainlogic\\grammar\\BBL.g:51:1: after_all : AFTER_ALL ^ STRING COMMA ! sentences ;
    public final BBLParser.after_all_return after_all() throws RecognitionException {
        BBLParser.after_all_return retval = new BBLParser.after_all_return();
        retval.start = input.LT(1);


        Object root_0 = null;

        Token AFTER_ALL27=null;
        Token STRING28=null;
        Token COMMA29=null;
        BBLParser.sentences_return sentences30 =null;


        Object AFTER_ALL27_tree=null;
        Object STRING28_tree=null;
        Object COMMA29_tree=null;

        try {
            // D:\\eclipse-rcp-helios-win32\\workspace\\eu.remics.domainlogic\\src\\eu\\remics\\domainlogic\\grammar\\BBL.g:51:10: ( AFTER_ALL ^ STRING COMMA ! sentences )
            // D:\\eclipse-rcp-helios-win32\\workspace\\eu.remics.domainlogic\\src\\eu\\remics\\domainlogic\\grammar\\BBL.g:51:12: AFTER_ALL ^ STRING COMMA ! sentences
            {
            root_0 = (Object)adaptor.nil();


            AFTER_ALL27=(Token)match(input,AFTER_ALL,FOLLOW_AFTER_ALL_in_after_all342); 
            AFTER_ALL27_tree = 
            (Object)adaptor.create(AFTER_ALL27)
            ;
            root_0 = (Object)adaptor.becomeRoot(AFTER_ALL27_tree, root_0);


            STRING28=(Token)match(input,STRING,FOLLOW_STRING_in_after_all345); 
            STRING28_tree = 
            (Object)adaptor.create(STRING28)
            ;
            adaptor.addChild(root_0, STRING28_tree);


            COMMA29=(Token)match(input,COMMA,FOLLOW_COMMA_in_after_all347); 

            pushFollow(FOLLOW_sentences_in_after_all350);
            sentences30=sentences();

            state._fsp--;

            adaptor.addChild(root_0, sentences30.getTree());

            }

            retval.stop = input.LT(-1);


            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }

        finally {
        	// do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "after_all"


    public static class except_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "except"
    // D:\\eclipse-rcp-helios-win32\\workspace\\eu.remics.domainlogic\\src\\eu\\remics\\domainlogic\\grammar\\BBL.g:53:1: except : WHEN ^ STRING COMMA ! sentences ;
    public final BBLParser.except_return except() throws RecognitionException {
        BBLParser.except_return retval = new BBLParser.except_return();
        retval.start = input.LT(1);


        Object root_0 = null;

        Token WHEN31=null;
        Token STRING32=null;
        Token COMMA33=null;
        BBLParser.sentences_return sentences34 =null;


        Object WHEN31_tree=null;
        Object STRING32_tree=null;
        Object COMMA33_tree=null;

        try {
            // D:\\eclipse-rcp-helios-win32\\workspace\\eu.remics.domainlogic\\src\\eu\\remics\\domainlogic\\grammar\\BBL.g:53:7: ( WHEN ^ STRING COMMA ! sentences )
            // D:\\eclipse-rcp-helios-win32\\workspace\\eu.remics.domainlogic\\src\\eu\\remics\\domainlogic\\grammar\\BBL.g:53:9: WHEN ^ STRING COMMA ! sentences
            {
            root_0 = (Object)adaptor.nil();


            WHEN31=(Token)match(input,WHEN,FOLLOW_WHEN_in_except357); 
            WHEN31_tree = 
            (Object)adaptor.create(WHEN31)
            ;
            root_0 = (Object)adaptor.becomeRoot(WHEN31_tree, root_0);


            STRING32=(Token)match(input,STRING,FOLLOW_STRING_in_except360); 
            STRING32_tree = 
            (Object)adaptor.create(STRING32)
            ;
            adaptor.addChild(root_0, STRING32_tree);


            COMMA33=(Token)match(input,COMMA,FOLLOW_COMMA_in_except362); 

            pushFollow(FOLLOW_sentences_in_except365);
            sentences34=sentences();

            state._fsp--;

            adaptor.addChild(root_0, sentences34.getTree());

            }

            retval.stop = input.LT(-1);


            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }

        finally {
        	// do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "except"


    public static class error_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "error"
    // D:\\eclipse-rcp-helios-win32\\workspace\\eu.remics.domainlogic\\src\\eu\\remics\\domainlogic\\grammar\\BBL.g:55:1: error : ( SHOW_ERROR ^| SHOW_WARNING ^) STRING ;
    public final BBLParser.error_return error() throws RecognitionException {
        BBLParser.error_return retval = new BBLParser.error_return();
        retval.start = input.LT(1);


        Object root_0 = null;

        Token SHOW_ERROR35=null;
        Token SHOW_WARNING36=null;
        Token STRING37=null;

        Object SHOW_ERROR35_tree=null;
        Object SHOW_WARNING36_tree=null;
        Object STRING37_tree=null;

        try {
            // D:\\eclipse-rcp-helios-win32\\workspace\\eu.remics.domainlogic\\src\\eu\\remics\\domainlogic\\grammar\\BBL.g:55:6: ( ( SHOW_ERROR ^| SHOW_WARNING ^) STRING )
            // D:\\eclipse-rcp-helios-win32\\workspace\\eu.remics.domainlogic\\src\\eu\\remics\\domainlogic\\grammar\\BBL.g:55:8: ( SHOW_ERROR ^| SHOW_WARNING ^) STRING
            {
            root_0 = (Object)adaptor.nil();


            // D:\\eclipse-rcp-helios-win32\\workspace\\eu.remics.domainlogic\\src\\eu\\remics\\domainlogic\\grammar\\BBL.g:55:8: ( SHOW_ERROR ^| SHOW_WARNING ^)
            int alt6=2;
            int LA6_0 = input.LA(1);

            if ( (LA6_0==SHOW_ERROR) ) {
                alt6=1;
            }
            else if ( (LA6_0==SHOW_WARNING) ) {
                alt6=2;
            }
            else {
                NoViableAltException nvae =
                    new NoViableAltException("", 6, 0, input);

                throw nvae;

            }
            switch (alt6) {
                case 1 :
                    // D:\\eclipse-rcp-helios-win32\\workspace\\eu.remics.domainlogic\\src\\eu\\remics\\domainlogic\\grammar\\BBL.g:55:9: SHOW_ERROR ^
                    {
                    SHOW_ERROR35=(Token)match(input,SHOW_ERROR,FOLLOW_SHOW_ERROR_in_error373); 
                    SHOW_ERROR35_tree = 
                    (Object)adaptor.create(SHOW_ERROR35)
                    ;
                    root_0 = (Object)adaptor.becomeRoot(SHOW_ERROR35_tree, root_0);

